k8s/policyrag-pvc-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: policyrag
spec:
    type: NodePort
    selector:
        app: policyrag
    ports:
        - port: 5000
          targetPort: 5000
          nodePort: 30050
